fix: scrollbar added to the approval tabs (#1353)

--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -133,7 +133,15 @@ img {
 .nav-tabs {
   display: block;
   margin-bottom: $space-default;
+  overflow-y: auto;
   white-space: nowrap;
+  // Hide scrollbar for Firefox
+  scrollbar-width: none;
+
+  // Hide scrollbar for Chrome, Safari and Opera
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   .nav-item {
     display: inline-block;
